--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
     <script src="main.js"></script>
 </head>
-<h1 class="class1">Header</h1>
+<div class="class1"></div>
+
+<h1>Header</h1>
 
 <body>
-<nav class="class1">Nav</nav>
+<nav>Nav</nav>
 
-<h2 class="class1">Aside</h2>
+<h2>Section</h2>
 
-<h3 class="class1">Section</h3>
+<h3>Article</h3>
 
-<h4>Article</h4>
+<h4>Aside</h4>
 
-<p1 class="class1">Footer</p1>
+<h5>Footer</h5>
 
 </body>
 </html>
