--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 <body>
 <nav>Nav</nav>
 
-<h2>Section</h2>
+<Section>Section</Section>
 
-<h3>Aside</h3>
+<aside>Aside</aside>
 
-<h4>Article</h4>
-<p1>h1, h2, h3</p1>
-<p2>p</p2>
+article>Article</article>
+    <h2>h1, h2, h3</h2>
+     <p1>p</p1>
 
-<h5>Footer</h5>
+<footer>Footer</footer>
 
 </body>
 </html>
