changes before start of class

--- a/index.html
+++ b/index.html
@@ -8,20 +8,22 @@
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
     <script src="main.js"></script>
 </head>
+
+<body>
 <div class="class1"></div>
 
 <h1>Header</h1>
 
-<body>
 <nav>Nav</nav>
 
-<Section>Section</Section>
+<Section>Section
+    <article>Article
+        <h2>h1, h2, h3</h2>
+        <p1>p</p1>
+    </article>
+</Section>
 
 <aside>Aside</aside>
-
-article>Article</article>
-    <h2>h1, h2, h3</h2>
-     <p1>p</p1>
 
 <footer>Footer</footer>
 
